--- a/dmm/templates/dmm/comment_round/_comment_round.html
+++ b/dmm/templates/dmm/comment_round/_comment_round.html
@@ -50,9 +50,9 @@ rounded p-3 bg-light border">
 
 
     {% if comment_round_tag.is_present %}
-    <i class="fas fa-check"></i>
+    <i class="fas fa-check text-success"></i>
     {% else %}
-    <i class="fas fa-times"></i>
+    <i class="fas fa-times text-danger"></i>
     {% endif %}
     {% endfor %}
     <br>
